[package]
name = "warp"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }

[features]
default = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[profile.release]
strip = "symbols"
lto = true
